# heuristica-p2

./: .gitignore  README.md  notas.txt  parte1.sh  profesora-approx9000.txt.csv
parte1/: CSPParking.py  input.txt  input.txt.csv  parking01-feasible.txt  parking02-no_feasible.txt  parte1.sh  read_write.py
parte1/test_cases/: parking03-feasible.txt  parking04-no_feasible.txt  parking05-feasible.txt  parking06-feasible.txt  parking07-no_feasible.txt
parte2/: ASTAR-calls.sh  ASTARTraslados.py  CMakeLists.txt  ambulance.cpp  ambulance.hpp  element.hpp  heap.cpp  heap.hpp  main.cpp  map.cpp  map.hpp  mapa_3x3.csv  mapa_grande.csv  mapa_grande.csv-5.output  mapa_grande.csv-5.stat  mapa_reducido.csv  position.hpp  state.hpp
parte2/ASTAR-tests/: mapa_3x3.csv-solution  mapa_recta.csv  mapa_solo_contagiosos.csv  mapa_solo_no_contagiosos.csv
parte2/casos_de_prueba/: Nota.txt  mapa_3x3.csv-1.stat  mapa_3x3_noFeasible.csv  mapa_contagioso_obligatorio.csv  mapa_enfermo_sin_vuelta.csv  mapa_todo_2.csv  mapa_todo_2.csv-1.output  mapa_todo_2.csv-1.stat  rectangulo.csv
parte2/src/: main.cpp  map.hpp  state.hpp
parte2/test_mapa/: mapa.csv  mapa1.csv  mapa2.csv
